examples/test/testpolicy4791.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4791
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key46: value16
      key14: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value27
          key14: value49
      podSelector:
        matchLabels:
          key5: value36
